[workspace]
members = ["types/"]

[package]
name = "mdotp"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ruma-common = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
mdotp_types = { path = "types/" }
axum = { version = "0.8.6", features = ["ws"] }
dotenvy = "0.15.7"
envy = "0.4.2"
matrix-sdk = { version = "0.14.0", default-features = false, features = ["native-tls"] }
ruma-common.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
